--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,6 @@
 {
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist/front-shippers"
-      }
-    }
-  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist/front-shippers",
   "rewrites": [
     {
       "source": "/api/(.*)",
